<resources>
    <string name="app_name" translatable="false">Young Limit</string>
    <string name="speed_sign">Panneau de limitation de vitesse</string>
    <string name="app_logo">Logo de Young Limit</string>
    <string name="unknown_road">Route inconnue</string>
    <string name="about">A propos</string>
    <string name="settings">Paramètres</string>
    <string name="next">Suivant</string>
    <string name="startup_text" >Bienvenue sur Young Limit !\nIl semblerait que c\'est votre première fois sur l\'application, laissez vous guider par les étapes suivantes.\nVous êtes à deux doigts de pouvoir utiliser l\'application</string>
    <string name="previous">Précédent</string>
    <string name="darkmode">Thème sombre</string>
    <string name="refresh_rate">Actualisation (s)</string>
    <string name="finish">Terminer</string>
    <string name="finish_text">Vous avez terminé la configuration de Young Limit. vous pouvez désormais utiliser l\'application ! Si vous souhaitez modifier ultérieurement vos choix, rendez vous dans les paramètres de l\'application. Bonne route !</string>
    <string name="location_permission_title">Permission de localisation</string>
    <string name="location_permission_message">Young Limit a besoin d\'avoir accès à ta position pour t\'afficher la bonne limitation de vitesse. Si tu ne souhaites pas la partager, l\'application ne peut pas fonctionner.</string>
    <string name="ok">OK</string>
    <string name="permission_needed">L\'autorisation de localisation est obligatoire</string>
    <string name="permissions">Permissions</string>
    <string name="permission_already_granted">Permission déjà accordée</string>
    <string name="unknown_speed">0 km/h</string>
    <string name="speedwarning">Alerte de dépassement de la limiation de vitesse</string>
    <string name="about_text">"  Application développée par Ethan Duault et la communauté \nBasée sur OpenStreetMap et l'API Overpass \nSound Effect by UNIVERSFIELD from Pixabay \nInformations données à titre indicatif uniquement"</string>
</resources>